# mySillyShell

./: .msshrc  CMakeLists.txt  Makefile  README.Md  a.out  output.txt  redirect.txt
alias/: alias.c  alias.h
linkedlist/: linkedList.c  listUtils.c  listUtils.h  requiredIncludes.h
main/: cscd340Lab5.c  cscd340Lab6.c
pipes/: pipes.c  pipes.h
process/: process.c  process.h
tokenize/: makeArgs.c  makeArgs.h
utils/: fileUtil.c  fileUtil.h  myUtils.c  myUtils.h
